--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
                             </div>
                             <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
                                 <div class="dropdown-toggle w-dropdown-toggle" style="text-align: center; width: 100%;">
-                                    <a href="./about" class="animated-link-wrapper-nav no-right-margin">
+                                    <a href="./about.html" class="animated-link-wrapper-nav no-right-margin">
                                         <div class="navlink text-light base-text li-text">About</div>
                                         <div class="line-hover invisible-mobile line-light"></div>
                                     </a>
@@ -107,17 +107,17 @@
                                     </a>
                                 </div>
                                 <nav class="dropdown-list w-dropdown-list">
-                                    <a href="/terms-of-service" class="dropdown-link w-dropdown-link base-text li-text">Terms of service</a>
-                                    <a href="/dcma" class="dropdown-link w-dropdown-link base-text li-text">DCMA</a>
-                                    <a href="/privacy-policy" class="dropdown-link w-dropdown-link base-text li-text">Privacy policy</a>
-                                    <a href="/complaints-policy" class="dropdown-link w-dropdown-link base-text li-text">Complaints policy</a>
+                                    <a href="/terms-of-service.html" class="dropdown-link w-dropdown-link base-text li-text">Terms of service</a>
+                                    <a href="/dcma.html" class="dropdown-link w-dropdown-link base-text li-text">DCMA</a>
+                                    <a href="/privacy-policy.html" class="dropdown-link w-dropdown-link base-text li-text">Privacy policy</a>
+                                    <a href="/complaints-policy.html" class="dropdown-link w-dropdown-link base-text li-text">Complaints policy</a>
                                 </nav>
                             </div>
 
                             <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
                                 <div class="dropdown-toggle w-dropdown-toggle" style="text-align: center; width: 100%;">
                                 
-                                    <a href="./faq" class="animated-link-wrapper-nav no-right-margin" >
+                                    <a href="./faq.html" class="animated-link-wrapper-nav no-right-margin" >
                                         <div class="navlink text-light base-text li-text">FAQ</div>
                                         <div class="line-hover invisible-mobile line-light"></div>
                                     </a>
@@ -128,7 +128,7 @@
                             <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
                                 <div class="dropdown-toggle w-dropdown-toggle" style="text-align: center; width: 100%;">
                                 
-                                    <a href="./contact" class="animated-link-wrapper-nav no-right-margin" >
+                                    <a href="./contact.html" class="animated-link-wrapper-nav no-right-margin" >
                                         <div class="navlink text-light base-text li-text">Contact</div>
                                         <div class="line-hover invisible-mobile line-light"></div>
                                     </a>
