--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
                             
                         </div>
-                        <a href="https://account.fanbayz.com/sign-up" class="button-basic-one w-button top-margin">Change your life</a>
+                        <a href="https://account.fanbayz.com/sign-up" class="button-basic-one w-button top-margin" style="margin-bottom: 50px;">Change your life</a>
                     </div>
                     <div data-w-id="dfb8c0b4-c7c2-5f41-deb4-57e173888ff6" class="intro-c01-image-wrapper">
                         <div class="image-full">
@@ -456,7 +456,7 @@
                             <p class="top-margin">Are you ready to connect with a global audience who shares your passions and appreciates your unique talents? At FanBayz, we provide you with the tools and platform to reach your audience and share your creativity with the world. FanBayz offers the perfect stage to showcase your work and connect with fans who love what you do.</p>
                         </div>
 
-                        <a href="https://account.fanbayz.com/sign-up" class="button-basic-one w-button top-margin">Join FanbBayz</a>
+                        <a href="https://account.fanbayz.com/sign-up" class="button-basic-one w-button top-margin" style="margin-bottom: 50px;">Join FanbBayz</a>
                     </div>
                 </div>
             </div>
