--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <meta property="og: type" content="website"/>
         <meta property="og: description" content="FanBayz is your destination for authentic connections and creative expression. Join a supportive community where passion thrives and genuine connections are made. Explore exclusive content, engage with like-minded individuals, and embrace your true self on FanBayz."/>
 
-         <!-- Twitter -->
+        <!-- Twitter -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@FanBayz.com">
         <meta name="twitter:creator" content="@FanBayz.com">
@@ -97,11 +97,11 @@
                             </div>
                             <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
                                 <div class="dropdown-toggle w-dropdown-toggle" style="text-align: center; width: 100%;">
-                                    <div class="icon light w-icon-dropdown-toggle"></div>
-                                    <a href="#" class="animated-link-wrapper-nav no-right-margin">
+                                    <div class="icon light w-icon-dropdown-toggle" ></div>
+                                    <div class="animated-link-wrapper-nav no-right-margin">
                                         <div class="navlink text-light base-text flashy-text li-text">Legal</div>
                                         <div class="line-hover invisible-mobile line-light"></div>
-                                    </a>
+                                    </div>
                                 </div>
                                 <nav class="dropdown-list w-dropdown-list">
                                     <a href="/terms-of-service.html" class="dropdown-link w-dropdown-link base-text li-text">Terms of service</a>
