--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -101,10 +101,10 @@
                             <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
                                 <div class="dropdown-toggle w-dropdown-toggle" style="text-align: center; width: 100%;">
                                     <div class="icon light w-icon-dropdown-toggle"></div>
-                                    <a href="#" class="animated-link-wrapper-nav no-right-margin">
+                                    <div class="animated-link-wrapper-nav no-right-margin">
                                         <div class="navlink text-light base-text flashy-text li-text">Legal</div>
                                         <div class="line-hover invisible-mobile line-light"></div>
-                                    </a>
+                                    </div>
                                 </div>
                                 <nav class="dropdown-list w-dropdown-list">
                                     <a href="/terms-of-service.html" class="dropdown-link w-dropdown-link base-text li-text">Terms of service</a>
@@ -901,7 +901,55 @@
 
                                             <li>If we are withholding all or any part of the Creator Earnings due to you and we determine that part of the Creator Earnings withheld by us is unrelated to breaches by you of the Terms of Service or suspected unlawful or fraudulent activity, then we may arrange for you to be paid the part of the Creator Earnings which we determine to be unrelated to breaches by you of the Terms of Service or suspected unlawful or fraudulent activity. However, you agree that if we consider that your breach(es) of the Terms of Service has or may cause us loss, we may withhold all Creator Earnings due to you but not yet paid and we may set off such amounts against any losses suffered by us.</li>
 
-                                            <li>If once we have finished our investigation we determine that Creator Earnings are forfeited, we will (unless prohibited by law) use our best efforts to ensure that any Fan Payments which resulted in forfeited Creator Earnings are returned to the relevant Fans who paid such Fan Payments.</li>
+                                            <li>If once we have finished our investigation we determine that Creator Earnings are forfeited, we will (unless prohibited by law) use our best efforts to ensure that any Fan Payments which resulted in forfeited Creator Earnings are returned to the relevant Fans who paid such Fan Payments.
+
+                                                <ul>
+                                                    <li>
+                                                        <strong>Promoting Tax compliance and VAT:</strong>
+                                                        <ul>
+                                                            <li>
+                                                                <strong>General:</strong>
+                                                                <ul>
+                                                                    <li>We recommend that all Creators seek professional advice to ensure you are compliant with your local Tax and VAT rules, based on your individual circumstances.</li>
+
+                                                                    <li>By using FanBayz as a Creator, you warrant (which means you make a legally enforceable promise) that you have reported and will report in the future the receipt of all payments made to you in connection with your use of FanBayz to the relevant Tax authority in your jurisdiction, as required by law.</li>
+
+                                                                    <li>
+                                                                        By using FanBayz as a Creator you warrant (which means you make a legally enforceable promise) that you will at all times comply with all laws and regulations relating to Tax which apply to you. If, at any point whilst you have an FanBayz account, any Tax non-compliance occurs in relation to you (including a failure by you to report earnings or the imposition on you of any penalty or interest relating to Tax) or if any litigation, enquiry, or investigation is commenced against you that is in connection with, or which may lead to, any occurrence of Tax non-compliance, you agree that you will:
+
+                                                                        <ul>
+                                                                            <li>notify us by email in writing within 7 days of the occurrence of the Tax non-compliance or the commencement of the litigation, enquiry or investigation (as applicable); and</li>
+
+                                                                            <li>promptly provide us by email to [insert email address] with:
+                                                                                <ul>
+                                                                                    <li>details of the steps which you are taking to address the occurrence of the Tax non-compliance and to prevent the same from happening again, together with any mitigating factors that you consider relevant; and</li>
+
+                                                                                    <li>such other information in relation to the occurrence of the Tax non-compliance as we may reasonably require.</li>
+                                                                                </ul>
+                                                                            </li>
+
+                                                                        </ul>
+
+                                                                    </li>
+
+                                                                    <li>
+                                                                        For the avoidance of doubt, you are responsible for your own Tax affairs and we and our subsidiary companies:
+
+                                                                        <ul>
+                                                                            <li>are not responsible for advising you on your Tax affairs and will not be liable in respect of any general information provided on FanBayz in respect of Tax, and</li>
+                                                                            <li>will not be liable for any non-payment of Tax by Creators.</li>
+                                                                        </ul>
+                                                                    </li>
+
+                                                                    <li>We reserve the right to close your FanBayz account if we are notified of or become aware of any Tax non-compliance by youLast updated: December 2021</li>
+
+                                                                </ul>
+                                                            </li>
+                                                        </ul>
+                                                    </li>
+                                                </ul>
+
+                                            </li>
 
                                         </ul>
                                     </li>
@@ -911,6 +959,106 @@
                             </li>
                             
                         </ol>
+
+                        <br><br>
+                        <h4>ACCEPTABLE USE POLICY</h4>
+                        <p>BY USING OUR WEBSITE YOU AGREE TO THIS POLICY – PLEASE READ IT CAREFULLY</p>
+
+                        <p>This Policy applies to your use of FanBayz and all Content on FanBayz and forms part of your agreement with us. This Policy sets out what is and is not permitted on FanBayz.
+In this Policy, defined terms have the same meanings as in our Terms of Use</p>
+
+                        <ol>
+                            <li>Do not use FanBayz except for your own personal use and do not sell, rent, transfer, or share your account or any Content obtained from your use of FanBayz to or with anyone else.</li>
+
+                            <li>Only use FanBayz in a manner and for a purpose that is lawful.</li>
+
+                            <li>Do not upload, post, display, or publish Content on FanBayz that is illegal, fraudulent, excessively pornographic, defamatory, hateful, discriminatory, threatening or harassing, or which encourages or promotes violence or any illegal activity.</li>
+
+                            <li>Do not use FanBayz in any way which may exploit, harm, or attempt to exploit or harm any individual under 18 years old, for example by exposing them to inappropriate Content.</li>
+
+                            <li>Do not upload, post, display, or publish Content on FanBayz that:
+                                <ul>
+                                    <li>shows, includes or refers to:
+                                        <ul>
+                                            <li>any individual under 18 years old (or which refers to individuals under 18 years old generally); or</li>
+                                            <li>any other individual unless you have written documentation which confirms that all individuals shown or included or referred to in your Content are at least 18 years old, and you have a written consent from each individual to use their name or images (or both) in the Content;</li>
+                                        </ul>
+                                    </li>
+
+                                    <li>shows, promotes, advertises or refers to:
+
+                                        <ul>
+                                            <li>pornography</li>
+                                            <li> firearms, weapons, or any goods whose sale, possession or use is subject to prohibitions or restrictions;</li>
+                                            <li>drugs or drug paraphernalia;</li>
+                                            <li> self-harm or suicide;</li>
+                                            <li>incest;</li>
+                                            <li> bestiality;</li>
+                                            <li>violence, rape, lack of consent, hypnosis, intoxication, sexual assault, torture, sadomasochistic abuse or hardcore bondage, extreme fisting, or genital mutilation;</li>
+                                            <li>necrophilia;</li>
+                                            <li>urine, scatological, or excrement-related material;</li>
+                                            <li>"revenge porn" (being any sexually explicit material featuring any individual who has not given prior, express and fully informed consent to that material (a) being taken, captured, or otherwise memorialized, or (b) being posted and shared on FanBayz);</li>
+                                            <li>escort services, sex trafficking, or prostitution;</li>
+                                        </ul>
+                                    </li>
+
+                                    <li>contains unsolicited sexual content or unsolicited language that sexually objectifies another User or anyone else in a non-consensual way, or contains fake or manipulated sexual content in relation to another User or anyone else (including "deepfakes");</li>
+
+                                    <li>contains, promotes, advertises or refers to hate speech (being Content intended to vilify, humiliate, dehumanize, exclude, attack, threaten, or incite hatred, fear of, or violence against, a group or individual based on race, ethnicity, national origin, immigration status, caste, religion, sex, gender identity or expression, sexual orientation, age, disability, serious disease, veteran status, or any other protected characteristic);</li>
+
+                                    <li>contains or refers to anyone else's personal data or private or confidential information (for example, telephone numbers, location information (including street addresses and GPS coordinates), names, identity documents, email addresses, log-in credentials for FanBayz including passwords and security questions, financial information including bank account and credit card details, biometric data, and medical records) without that person's express written consent;</li>
+
+                                    <li>either:
+                                        <ul>
+                                            <li>in the case of Content featuring public nudity, was recorded in or is being broadcast from a country, State or province where public nudity is illegal; or</li>
+                                            <li>in the case of Content featuring sexual activities, was recorded in or is being broadcast from a public place where members of the public are reasonably likely to see the activities being performed (this does not include outdoor places where members of the public are not present, for example private property such as a private backyard, or secluded areas in nature where members of the public are not present).</li>
+                                        </ul>
+                                    </li>
+
+                                    <li>gives the impression that it comes from or is approved, licensed or endorsed by us or any other person or company;</li>
+
+                                    <li>causes or is calculated to cause inconvenience, or anxiety to anyone else or which is likely to upset, embarrass, or cause serious offence to anyone else;</li>
+
+                                    <li>is used or is intended to be used to extract money or another benefit from anyone else in exchange for removal of the Content; and/or</li>
+
+                                    <li>involves or promotes third-party commercial activities or sales, such as contests, sweepstakes and other sales promotions, product placements, advertising, or job posting or employment ads without our prior express consent.</li>
+
+                                </ul>
+                            </li>
+
+                            <li>Do not use FanBayz to stalk, bully, abuse, harass, threaten or intimidate anyone else.</li>
+
+                            <li>Do not use FanBayz to engage in misleading or deceptive conduct, or conduct that is likely to mislead or deceive any other User.</li>
+
+                            <li>Respect the intellectual property rights of Creators, including by not recording, reproducing, sharing, communicating to the public or otherwise distributing their Content without authorization.</li>
+
+                            <li>Do not do anything that violates our or someone else's rights, including intellectual property rights (examples of which are copyright, trademarks, confidential information, and goodwill), personality rights, unfair competition, privacy, and data protection rights.</li>
+
+                            <li>Do not impersonate us, one of our employees, another User, or any other person or company or falsely state or suggest any affiliation, endorsement, sponsorship between you and us or any other person or company.</li>
+
+                            <li>Do not provide false account registration information or make unauthorized use of anyone else's information or Content.</li>
+
+                            <li>Do not post or cause to be posted any Content which is spam, which has the intention or effect of artificially increasing any Creator's views or interactions, or which is otherwise inauthentic, repetitive, misleading or low quality.</li>
+
+                            <li>Do not transmit, stream, or otherwise send any pre-recorded audio or video material during a live stream or otherwise attempt to pass off recorded material as a live stream.</li>
+
+                            <li>Do not use other media or methods (for example the use of codewords or signals) to communicate anything which violates this Policy.</li>
+
+                            <li>Do not reproduce, print, distribute, attempt to download, modify, create derivative works of, publicly display, publicly perform, republish, download, store or transmit any Content, except as permitted under the Terms of Service.</li>
+
+                            <li>Do not knowingly introduce any viruses, trojans, worms, logic bombs or other material into Content which is or may be malicious or technologically harmful.</li>
+
+                            <li>Do not decompile, disassemble, reverse engineer, or otherwise attempt to discover or derive the source code of FanBayz.</li>
+
+                            <li>Do not use FanBayz in a way that could adversely affect our systems or security or interfere with any other User’s use of FanBayz, including their ability to engage in real-time activities through FanBayz.</li>
+
+                            <li>Do not use any automated program, tool or process (such as web crawlers, robots, bots, spiders, and automated scripts) to access FanBayz or any server, network or system associated with FanBayz, or to extract, scrape, collect, harvest or gather Content or information from FanBayz.</li>
+
+                            <li>Do not use FanBayz' name, logo or any related or similar names, logos, product and service names, designs, or slogans other than in the limited ways which are expressly permitted in the Terms of Service or with our prior written agreement.</li>
+
+                        </ol>
+
+                        <p>Breaches of this Policy may lead to your account being suspended or terminated, and access to your earnings being revoked, as set out in the Terms of Service.</p>
 
                     </div>
                 </div>
