--- a/faq.html
+++ b/faq.html
@@ -101,10 +101,10 @@
                             <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
                                 <div class="dropdown-toggle w-dropdown-toggle" style="text-align: center; width: 100%;">
                                     <div class="icon light w-icon-dropdown-toggle"></div>
-                                    <a href="#" class="animated-link-wrapper-nav no-right-margin">
+                                    <div class="animated-link-wrapper-nav no-right-margin">
                                         <div class="navlink text-light base-text flashy-text li-text">Legal</div>
                                         <div class="line-hover invisible-mobile line-light"></div>
-                                    </a>
+                                    </div>
                                 </div>
                                 <nav class="dropdown-list w-dropdown-list">
                                     <a href="/terms-of-service.html" class="dropdown-link w-dropdown-link base-text li-text">Terms of service</a>
