--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
         <!-- OG -->
         <meta property="og:url" content="https://www.FanBayz.com"/>
-        <meta property="og: title" content="FanBayz | Monetize your creativity"/>
+        <meta property="og: title" content="FanBayz | It's a fun place"/>
         <meta property="og: image" itemprop="image" content="https://www.FanBayz.com/img/ogImage.png"/>
         <meta property="og:image:width" content="2500">
         <meta property="og:image:height" content="1900">
@@ -25,7 +25,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@FanBayz.com">
         <meta name="twitter:creator" content="@FanBayz.com">
-        <meta name="twitter:title" content="FanBayz | Monetize your creativity">
+        <meta name="twitter:title" content="FanBayz | It's a fun place">
         <meta name="twitter:description" content="FanBayz is your destination for authentic connections and creative expression. Join a supportive community where passion thrives and genuine connections are made. Explore exclusive content, engage with like-minded individuals, and embrace your true self on FanBayz.">
         <meta name="twitter:image" content="https://www.fanbayz.com/img/ogImage.png">
         <meta property="twitter:image:width" content="2500">
