--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <!-- OG -->
         <meta property="og:url" content="https://www.fanBayz.com"/>
-        <meta property="og: title" content="FanBayz | Monetize your creativity"/>
+        <meta property="og: title" content="FanBayz | It's a fun place"/>
         <meta property="og: image" itemprop="image" content="https://www.FanBayz.com/img/ogImage.png"/>
         <meta property="og:image:width" content="2500">
         <meta property="og:image:height" content="1900">
@@ -25,7 +25,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@FanBayz.com">
         <meta name="twitter:creator" content="@FanBayz.com">
-        <meta name="twitter:title" content="FanBayz | Monetize your creativity">
+        <meta name="twitter:title" content="FanBayz | It's a fun place">
         <meta name="twitter:description" content="FanBayz is your destination for authentic connections and creative expression. Join a supportive community where passion thrives and genuine connections are made. Explore exclusive content, engage with like-minded individuals, and embrace your true self on FanBayz.">
         <meta name="twitter:image" content="https://www.FanBayz.com/img/ogImage.png">
         <meta property="twitter:image:width" content="2500">
@@ -178,7 +178,7 @@
                     </div>
                 </div>
                 <div class="accent-l04-content-wrapper colour-four round" style="z-index: 999;">
-                    <h1 class="text-accent-on smaller text-light heText" >Monetize Your Creativity</h1>
+                    <h1 class="text-accent-on smaller text-light heText" >It's a Fun Place</h1>
                     <div class="line-horizontal short line-light"></div>
                     <p class="one-column text-light">FanBayz is your destination for authentic connections and creative expression. Join a supportive community where passion thrives and genuine connections are made.   <span class="invisible-mobile">Explore exclusive content, engage with like-minded individuals, and embrace your true self on FanBayz. Step into a world where intimacy knows no bounds. Escape the ordinary and embrace the extraordinary as you delve into a realm of passion, creativity, and genuine human connection.</span></p>
                     <div class="accent-l04-image-wrapper-02">
