--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -2,7 +2,7 @@
 <html lang="en" data-wf-page="62ba1b37b201c1fae32367de" data-wf-site="6251a5c5a049d73337eaaf68" >
     <head>
         <meta charset="utf-8"/>
-        <title>FanBayz | Monetize your creativity</title>
+        <title>FanBayz | It's a fun place</title>
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
         <!-- META -->
