--- a/faq.html
+++ b/faq.html
@@ -2,12 +2,12 @@
 <html lang="en" data-wf-page="62ba1b37b201c1fae32367de" data-wf-site="6251a5c5a049d73337eaaf68" >
     <head>
         <meta charset="utf-8"/>
-        <title>FanBayz | It's a fun place</title>
+        <title>Faq</title>
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
         <!-- META -->
         <meta name="keywords" content=" content, adult, onlyfans, FanBayz, fan, teaz, fan teaz, . ,  ,"/>
-        <meta name="description" content="FanBayz is your destination for authentic connections and creative expression. Join a supportive community where passion thrives and genuine connections are made. Explore exclusive content, engage with like-minded individuals, and embrace your true self on FanBayz."/>
+        <meta name="description" content="Some of the questions we get asked often"/>
         <meta name="author" content="FanBayz Dev Team"/>
         <meta name="robots" content="max-image-preview:large"/>
 
