--- a/dcma.html
+++ b/dcma.html
@@ -183,7 +183,7 @@
                 <div class="privacy-policy-wrapper">
                     <div class="w-richtext">
                         <h4>Introduction</h4>
-                        <p>This DMCA Takedown Policy is to be used only for reporting infringing content published on fanbayz.com. To request assistance with removing infringing material found on other websites, please contact us here: <a href="http://www.fanbayz.com/contact"></a> </p>
+                        <p>This DMCA Takedown Policy is to be used only for reporting infringing content published on fanbayz.com. To request assistance with removing infringing material found on other websites, please contact us here: <a style="color: #008080; " href="mailto:help@fanbayz.com">help@fanbayz.com</a> </p>
 
                         <br>
                         <h4>DMCA Notice & Takedown Policy and Procedures</h4>
