--- a/about.html
+++ b/about.html
@@ -189,14 +189,14 @@
                     </div>
                     <div class="intro-m01-about-text">
                         <h2 class="text-light heText2" style="margin-top: 50px;">About us</h2>
-                        <div class="text-light top-margin-20-px" style="margin-top: 50px;"> Welcome to FanBayz, a vibrant and inclusive community where creativity, connection, and authenticity reign supreme. <span class="invisible-mobile">Founded with the belief that everyone deserves a space to express themselves freely and connect with like-minded individuals. FanBayz is more than just a platform, it's a celebration of human expression in all its forms.</span> </div>
+                        <div class="text-light top-margin-20-px" style="margin-top: 50px;"> FanBayz is a vibrant and inclusive community where creativity, connection, and authenticity reign supreme. <span class="invisible-mobile">Founded with the belief that everyone deserves a space to express themselves freely and connect with like-minded individuals. FanBayz is more than just a platform, it's a celebration of human expression in all its forms.</span> </div>
                         <a href="https://app.fanbayz.com/sign-up" style="margin-bottom: 50px;" class="button-basic-two top-margin-40px w-button">Join us</a>
                     </div>
-                    <div class="intro-m01-about-small-preview invisible-mobile">
+                    <!-- <div class="intro-m01-about-small-preview invisible-mobile">
                         <div class="image-vertical">
                             <img src="https://assets-global.website-files.com/6251a5c5a049d73337eaaf68/6251f902204a1cfaea736157_Group%203.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, 15vw" srcset="https://assets-global.website-files.com/6251a5c5a049d73337eaaf68/6251f902204a1cfaea736157_Group%203-p-500.jpeg 500w, https://assets-global.website-files.com/6251a5c5a049d73337eaaf68/6251f902204a1cfaea736157_Group%203-p-800.jpeg 800w, https://assets-global.website-files.com/6251a5c5a049d73337eaaf68/6251f902204a1cfaea736157_Group%203-p-1080.jpeg 1080w, https://assets-global.website-files.com/6251a5c5a049d73337eaaf68/6251f902204a1cfaea736157_Group%203.jpg 1134w" alt="" class="image"/>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
