--- a/index.html
+++ b/index.html
@@ -171,24 +171,24 @@
         </div>
 
         <!-- SECTION 1 -->
-        <div data-w-id="4dbf49c3-2c18-9b1c-68cb-6adb3522cc30" class="section colour-one">
+        <div data-w-id="4dbf49c3-2c18-9b1c-68cb-6adb3522cc30" class="section colour-one" >
             <div class="w-layout-grid accent-l04-grid">
-                <div class="accent-l04-image-container">
+                <div class="accent-l04-image-container" >
                     <div class="accent-l04-image-wrapper-01">
-                        <div class="image-vertical heImg" style=" background-image: url(./img/models/model15.jpg); ">
+                        <div class="image-vertical heImg" style=" background-image: url(./img/bannImgg2.png); background-size: cover; background-position: -45px;">
                             
                         </div>
                     </div>
                 </div>
-                <div class="accent-l04-content-wrapper colour-four round" style="z-index: 999;">
+                <div class="accent-l04-content-wrapper colour-four round" style="z-index: 999; ">
                     <h1 class="text-accent-on smaller text-light heText" >It's a Fun Place</h1>
                     <div class="line-horizontal short line-light"></div>
                     <p class="one-column text-light">FanBayz is your destination for authentic connections and creative expression. Join a supportive community where passion thrives and genuine connections are made.   <span class="invisible-mobile">Explore exclusive content, engage with like-minded individuals, and embrace your true self on FanBayz. Step into a world where intimacy knows no bounds. Escape the ordinary and embrace the extraordinary as you delve into a realm of passion, creativity, and genuine human connection.</span></p>
-                    <div class="accent-l04-image-wrapper-02">
+                    <!-- <div class="accent-l04-image-wrapper-02">
                         <div class="image-vertical">
-                            <img src="./img/models/model16.jpg" loading="lazy"  alt="" class="image"/>
+                            <img src="./img/bannImgg.png" loading="lazy"  alt="" class="image"/>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
