--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
                 <div data-w-id="e6004d9e-f607-7c5b-86ee-3c5c16d949c5" class="intro-m01-about">
                     <div class="intro-m01-about-preview _01">
                         <div class="image-full">
-                            <img src="./img/aboutBanner.png" loading="lazy" alt="" class="image"/>
+                            <!-- <img src="./img/aboutBanner.png" loading="lazy" alt="" class="image"/> -->
                         </div>
                     </div>
                     <div class="intro-m01-about-text">
